# perception_for_planning

./: .gitignore  CLAUDE.md  README.md  __init__.py  cache_demo.py  demo_visualization.py  example_gemini.py  gemini.py  gemini_cache.py  pyproject.toml  query_gemini.py  sam_client.py  sam_local_client.py  sam_replicate_client.py  sam_server.py  segmentation.py  setup.py  structs.py  utils.py  visualization.py
examples/: example_gemini.py
perception_for_planning/: __init__.py  gemini.py  gemini_cache.py  sam_local_client.py  segmentation.py  visualization.py
perception_for_planning/prompts/: detect_and_translate.txt  detect_bboxes.txt  translate_task.txt
